fix card alignment

--- a/styles/global.css
+++ b/styles/global.css
@@ -76,8 +76,8 @@ code {
 
 .grid {
     display: flex;
-    /* align-items: left; */
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
     max-width: 1600px;
